# laye

./: CMakeLists.txt  LICENSE.md  README.md
src/clayec-src/clayec-front-laye/private/: ast.h  laye_ast.c  laye_front.c  laye_lexer.c  laye_lyir.c  laye_parser.c  lyir.h  token.h
src/clayec-src/clayec-front-laye/public/layec/front/laye/: front.h
src/clayec-src/clayec-lib/private/: compiler.c  diagnostic.c  lyir.c
src/clayec-src/clayec-lib/public/layec/: compiler.h  diagnostic.h
src/clayec-src/clayec/private/: main.c
src/example/: hello.laye  numbers.laye  rng.laye
src/kos/private/: kos_allocator.c  kos_args.c  kos_builtins.c  kos_platform.c  kos_stb_ds.c  kos_string.c  kos_utf8.c
src/kos/public/kos/: allocator.h  ansi.h  args.h  builtins.h  kos.h  platform.h  primitives.h  stb_ds.h  string.h  utf8.h
src/layec-front-laye/public/layec/front/laye/: token.h
src/layec-lib/private/: compiler.c
src/layec-lib/public/layec/: compiler.h  diagnostic.h
src/layec/private/: main.c
src/layec1-src/layec1-front-laye/private/: ast.h  laye_ast.c  laye_front.c  laye_lexer.c  laye_parser.c  parser.h  token.h
src/layec1-src/layec1-front-laye/public/layec/front/laye/: ast.h  token.h
src/layec1-src/layec1-lib/private/: compiler.c
src/layec1-src/layec1-lib/public/layec/: compiler.h  diagnostic.h
src/layec1-src/layec1-lib/public/layec/front/: front.h
src/layec1-src/layec1/private/: main.c
test/: empty_main.laye
